...
                ? SelectableText.rich(
                    _pretty.buildTextSpan(
                      context: context,
                      style: style,
                      withComposing: false,
                    ),
                    key: const Key('response-content'),
                  )
                : _search.text.isEmpty
                ? SelectableText(
                    text.isEmpty ? '(empty body)' : text,
                    style: style,
                    key: Key(pretty ? 'response-content' : 'response-raw'),
...
